public/css/style.css
/* ... */
.menu-item.ativo .seta {
  transform: rotate(90deg); /* vira pra baixo */
}

.dashboard-sidebar li {
  list-style: none;
  margin: 15px 0;
  cursor: pointer;
}

.dashboard-conteudo {
  display: grid;
  gap: 20px;
  padding: 40px;
  margin-left: 30%;
  align-items: start;
}

.card-topo {
  height: 150px;
  width: 300px;
  display: grid;
  grid-template: 3fr 1fr; 
  justify-items: center;
  align-items: center;
  border: 5px solid #2c6794;
  background-color: white;
  border-radius: 10px;
}

.card-topo .titulo-card {
  text-align: center;
  font-size: 22px;
  font-weight: bold;
  margin-top: 10px;
}

.cards-topo {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 45px;
}

.card-topo span {
  font-size: 50px;
  font-weight: bold;
  margin: 0 0 10px 0;
}

.card-topo small {
  font-size: 35px;
}

.card-topo .titulo-card {
  font-size: 19px;
  font-weight: bold;
  margin-bottom: 5px;
  text-align: center;
}

.card-container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.full-width {
  grid-column: span 3;
}

.titulo-card {
  margin-bottom: 8px;
  font-size: 20px;
  color: #000000;
}

.dashboard-card {
  background-color: white;
  border-radius: 12px;
  padding: 20px;
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
  width: 100%;
  height: 350px;
  border: 2px solid black;
}

.grafico-container {
  width: 100%;
  max-width: 350px;
  height: 230px;
}

.grafico-mensal {
  width: 500px;
  height: 330px;
  justify-content: center;
}

.dashboard-graficos-grandes {
  display: flex;
  justify-content: center;
  align-items: center;
}

.grafico-grande {
  width: 100%;
  max-width: 550px;
  height: 300px;
  margin: 0 auto;
}

.full-width .grafico-container {
  max-width: 100%;
  width: 100%;
  height: 100%;
}

.full-width .dashboard-card {
  width: 100%;
  height: 400px;
}

.linha-dupla {
  grid-column: span 3;
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 20px;
}

.info-container {
  display: flex;
  flex-direction: column;
}

.alert {
  display: grid;
  align-items: center;
  gap: 20px;
  padding: 20px 0;
  
  border-top: 2px solid #000000;
  border-bottom: 2px solid #000000;
}

.alerta-titulo {
  font-weight: bold;
  font-size: 19px;
}

.alerta-silos {
  display: flex;
  gap: 15px;
}

.silo-input {
  width: 300px;
  padding: 12px;
  border: none;
  border-radius: 8px;
  text-align: center;
  font-weight: bold;
  font-size: 16px;
  cursor: default;
  outline: none;
}

.silo-input.critico {
  background-color: #7f0d0d;
  color: white;
}

.silo-input.atencao {
    background-color: #f1ae00;
    color: white;
  }
  
  .silo-input {
    user-select: none;
  }
  
  .acoes {
    margin-top: auto;
    margin-bottom: 20px;
  }
  
  .acoes button {
  width: 90%;
  margin: 10px auto;
  padding: 12px;
  font-size: 20px;
  font-weight: bold;
  border: none;
  border-radius: 25px;
  cursor: pointer;
  display: block;
  text-align: center;
  color: white;
  background-color: #2c6794;
  transition: 0.3s;
}

.card-estoque {
  display: flex;
  flex-direction: column;
  gap: 12px;
  width: 100%;
}

  .titulo-info {
    font-size: 16px;
    font-weight: 700;
    color: #2c6794;
    margin: 0;
  }
  
  .input-info {
    width: 100%;
    padding: 12px 16px;
    border: none;
    border-radius: 8px;
    font-size: 16px;
    font-weight: bold;
    text-align: center;
    outline: none;
    box-sizing: border-box;
  }
  
  .input-info.estoque {
    background-color: #5e6655;
    color: white;
    cursor: default;
  }
  
  .input-info.valor-tonelada {
    background-color: #5e6655;
    color: white;
  }
  .input-info.valor-tonelada::placeholder {
    color: white;
    opacity: 85%;
  }
  
  .input-info.valor-total {
    background-color: #324001;
    color: white;
    cursor: default;
  }
  
  .resultado-estoque {
    margin-top: 10px;
  }

  .resultado-estoque input{
    color: white;
  }
  
  .acoes button:hover {
    opacity: 0.85;
    color: #95b814;
    transition: 0.3s;
  }
  
  /*
  Cadastro de Silo
  */

  .dashboard-conteudo {
    display: flex !important;
    flex-direction: column !important;
    gap: 20px;
    padding: 40px;
    margin-left: 30%;
    align-items: stretch;
  }
  
  .dashboard-linha-topo {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 20px;
    align-items: start;
  }
  
  .dashboard-card-gauge {
    display: flex;
    flex-direction: column;
    align-items: center;
  justify-content: center;
}

.grafico-gauge {
  width: 100%;
  max-width: 220px;
  height: 160px;
  margin: 0 auto;
}

.grafico-mensal {
  width: 100% !important;
  height: 270px !important;
  max-width: unset !important;
}

.grafico-semanal {
  width: 100%;
  height: 270px;
}

.grafico-mensal-full {
  width: 100%;
  height: 270px;
}

.full-width {
  grid-column: unset;
  width: 100%;
}

.full-width .grafico-container {
  max-width: 100% !important;
  width: 100%;
  height: 100%;
}

.full-width .dashboard-card {
  width: 100%;
  height: 320px;
}

/* Scrollbar*/ 
.dashboard-body {
  overflow-y: auto;
}
.dashboard-body::-webkit-scrollbar {
  width: 12px; 
  background: var(--cor-fundo-scroll-fundo-verde);
}
.dashboard-body::-webkit-scrollbar-thumb {
  border-radius: 100px;
  background: rgb(121, 191, 16);
}

.bodyLoginCad {
  overflow-y: auto;
}
.bodyLoginCad::-webkit-scrollbar {
  width: 12px; 
  background: var(--cor-fundo-scroll-fundo-verde);
}
.bodyLoginCad::-webkit-scrollbar-thumb {
  border-radius: 100px;
  background: rgb(121, 191, 16);
}

.index {
  overflow-y: auto;
}
.index::-webkit-scrollbar {
  width: 12px; 
  background: var(--cor-fundo-scroll-fundo-azul);
}
.index::-webkit-scrollbar-thumb {
  border-radius: 100px;
  background:var(--cor-fundo-scroll-azul);
}

.simulador-body {
  overflow-y: auto;
}
.simulador-body::-webkit-scrollbar {
  width: 12px; 
  background: var(--cor-fundo-scroll-fundo-azul);
}
.simulador-body::-webkit-scrollbar-thumb {
  border-radius: 100px;
  background: var(--cor-fundo-scroll-azul);
}
/* ... */

